Fix stylings on mobile, mobile dropdown clickability

--- a/src/components/site/CookieUsage/CookieUsage.less
+++ b/src/components/site/CookieUsage/CookieUsage.less
@@ -16,7 +16,7 @@
     font-size: 16px;
     line-height: 24px;
     letter-spacing: 0.444444px;
-    color: rgba(0, 0, 0, 0.87);
+    color: var(--foreground-primary-opacity);
   }
 
   .CookieUsage__text {
@@ -28,7 +28,7 @@
     padding: 16px 0;
 
     span {
-      color: rgba(0, 0, 0, 0.87);
+      color: var(--foreground-primary-opacity);
     }
   }
 
